--- a/homework_2/styles.css
+++ b/homework_2/styles.css
@@ -78,51 +78,66 @@ header h1 span {
 
   .mobile-header {
     display: flex;
-    justify-content: space-between;
+    justify-content: center;
     position: fixed;
     width: calc(100% - 40px);
     left: 0;
     bottom: 0;
+    z-index: 1;
     align-items: center;
+    height: 50px;
     padding: 20px;
     background-color: lightblue;
   }
 
   .mobile-header nav {
-    position: fixed;
-    width: 100%;
     display: flex;
     justify-content: center;
     align-items: center;
-    background-color: #ccc;
-    padding: 15px 0;
-    left: 0;
   }
 
-  nav ul {
+  .menu-toggle-link {
+    display: block;
+    background-color: transparent;
+    align-items: center;
+    border: none;
+    font-size: 12px;
+    cursor: pointer;
+  }
+
+  .menu {
+    display: none;
+    position: fixed;
+    bottom: 50px;
+    left: 0;
+    width: 100%;
+    padding: 10px;
+    background-color: #fff;
+    border: 1px solid #ccc;
+    border-radius: 5px;
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
+    z-index: 2;
+  }
+
+  .menu ul {
+    display: flex;
+    flex-direction: column;
     margin: 0;
     padding: 0;
-    display: flex;
-    gap: 20px;
-    justify-content: center;
-    align-items: center;
   }
-
-  nav ul li {
-    margin: 0;
+  
+  .menu li {
+    margin-bottom: 10px;
   }
-
-  nav ul li a {
-    text-decoration: none;
-    color: #333;
-    font-weight: bold;
-    text-transform: uppercase;
-    font-size: 10px;
+  
+  .menu li:last-child {
+    margin-bottom: 0;
   }
-
-  nav {
-    width: 100%;
-  }
+  
+  .menu-toggle-link:focus + .menu,
+  .menu:focus-within {
+  display: block;
+}
 
   form label,
   form input {
